[package]
name = "simple-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"     # Cryptographic hash functions (for hashing the block content)
chrono = "0.4"    # For generating timestamps
serde = "1.0"     # For serializing block data (optional, for saving/loading)
serde_json = "1.0" # For serializing block data in JSON format (optional)
